[gd_scene load_steps=2 format=3 uid="uid://d1ctm821wa3np"]

[ext_resource type="Script" path="res://scripts/TutorialWindow.gd" id="1_tutorial"]

[node name="TutorialWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 300.0
script = ExtResource("1_tutorial")

[node name="PanelBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
mouse_filter = 1

[node name="TitleLabel" type="Label" parent="TitleBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 200.0
offset_bottom = 11.5
grow_vertical = 2
text = "Tutorial"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="TitleBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -15.0
offset_right = -5.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "Ã—"

[node name="MessageContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MessageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Welcome to the tutorial! The text will appear here with a typing effect."
scroll_following = true

[node name="ButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="NextButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -15.0
offset_right = -10.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "Next"

[node name="ResizeHandle" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 12

[connection signal="gui_input" from="TitleBar" to="." method="_on_title_bar_gui_input"]
[connection signal="pressed" from="TitleBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ButtonPanel/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="gui_input" from="ResizeHandle" to="." method="_on_resize_handle_gui_input"]
